--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>GANGBANG</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- ВАЖНО ДЛЯ МОБИЛЬНЫХ -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
+
+    <img src="avatar.jpg" alt="avatar" class="avatar">
+
     <h1>GANGBANG</h1>
     <p class="subtitle">official links</p>
 
-    <a href="https://youtube.com" class="btn">YouTube</a>
-    <a href="https://t.me" class="btn">Telegram</a>
-    <a href="https://instagram.com" class="btn">Instagram</a>
+    <a href="https://t.me/gang_bang_shock" class="btn">Telegram Channel</a>
+    <a href="https://t.me/avawwerr" class="btn">Telegram</a>
+    <a href="https://instagram.com/" class="btn">Instagram</a>
+
 </div>
 
 </body>
