--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <title>GANGBANG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css?v=6">
+
+    <!-- Inter font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css?v=10">
 </head>
 <body>
 
-<div class="container">
+<div class="wrapper">
 
-    <img src="avatar.jpg" class="avatar">
+    <div class="profile">
+        <img src="avatar.jpg" class="avatar">
+        <h1>GANGBANG</h1>
+        <p class="subtitle">official links</p>
+    </div>
 
-    <h1>GANGBANG</h1>
-    <p class="subtitle">official links</p>
-
-    <a href="https://t.me/+LZAvKc40tCliZDky" class="btn">Telegram Channel</a>
-    <a href="https://t.me/gang_bang_shock" class="btn">Telegram</a>
-    <a href="https://instm.com/" class="btn">Telegram Bot</a>
+    <div class="links">
+        <a href="https://t.me/+LZAvKc40tCliZDky" class="btn">Telegram Channel</a>
+        <a href="https://t.me/gang_bang_shock" class="btn">Telegram</a>
+        <a href="https://instm.com/" class="btn">Telegram Bot</a>
+    </div>
 
 </div>
 
